--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,14 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="css/vendor.css" />
-    <link rel="stylesheet" type="text/css" href="css/app.css" />
+    <link rel="stylesheet" type="text/css" href="styles/vendor.css" />
+    <link rel="stylesheet" type="text/css" href="styles/app.css" />
     <title>Mithril Project</title>
 </head>
 
 <body>
-    <script src="js/vendor.js"></script>
-    <script src="js/app.js"></script>
+    <script src="scripts/vendor.js"></script>
+    <script src="scripts/app.js"></script>
 </body>
 
 </html>
