Move Gulp tasks into separate files. Add linting, prism, and others. Update Mithril to 0.1.19.

--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,24 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="styles/vendor.css" />
-    <link rel="stylesheet" type="text/css" href="styles/app.css" />
+    <!-- build:css vendor.css -->
+    <!-- bower:css -->
+    <!-- endbower -->
+    <!-- endbuild -->
+    <!-- build:css app.css -->
+    <link rel="stylesheet" type="text/css" href="app.css" />
+    <!-- endbuild -->
     <title>Mithril Project</title>
 </head>
 
 <body>
-    <script src="scripts/vendor.js"></script>
-    <script src="scripts/app.js"></script>
+    <!-- build:js vendor.js -->
+    <!-- bower:js -->
+    <!-- endbower -->
+    <!-- endbuild -->
+    <!-- build:js app.js -->
+    <script src="app.js"></script>
+    <!-- endbuild -->
 </body>
 
 </html>
