Replace gulp-filter with gulp-if, update useref and build task to fix bower deps

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
 <body>
     <!-- build:js vendor.js -->
     <!-- bower:js -->
+    <script src="../bower_components/jquery/dist/jquery.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js app.js -->
